--- a/main/frontend/src/styles/styles.scss
+++ b/main/frontend/src/styles/styles.scss
@@ -228,6 +228,10 @@ header {
 					background-repeat: no-repeat;
 					background-size: contain;
 				}
+
+                .nav-info {
+                    bottom: -1.95rem;
+                }
 			}
 
 			& > * {
