--- a/main/frontend/src/styles/styles.css
+++ b/main/frontend/src/styles/styles.css
@@ -212,4 +212,56 @@ header nav.right .nav-info {
   display: none;
   font-weight: 400;
   z-index: 999;
+}
+
+.main-container {
+  display: grid;
+  grid-template-columns: 300px 1fr;
+  gap: 4rem;
+  padding: 4rem;
+}
+
+.sidebar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-items: flex-start;
+  flex-direction: column;
+  gap: 1rem;
+}
+.sidebar .boards {
+  width: 100%;
+  height: 2rem;
+  font-size: 16px;
+  font-weight: 700;
+  border-radius: 5px;
+  cursor: pointer;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  padding-left: 0.5rem;
+}
+.sidebar .boards.focus {
+  color: #0055cc;
+}
+.sidebar .boards.focus i {
+  color: #0055cc;
+}
+.sidebar .boards:hover {
+  background-color: rgba(161, 189, 217, 0.0784313725);
+}
+.sidebar .boards i {
+  padding-right: 0.5rem;
+}
+.sidebar .line {
+  height: 1px;
+  width: 100%;
+  background-color: rgba(9, 30, 66, 0.0588235294);
+}
+.sidebar .add {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
 }/*# sourceMappingURL=styles.css.map */
