--- a/main/frontend/src/styles/styles.scss
+++ b/main/frontend/src/styles/styles.scss
@@ -306,6 +306,66 @@ header {
 	}
 }
 
+.main-container {
+	display: grid;
+	grid-template-columns: 300px 1fr;
+	gap: 4rem;
+	padding: 4rem;
+}
+
+// ===============
+// Sidebar
+// ===============
+
+.sidebar {
+	@include flexCenter();
+	align-items: flex-start;
+	flex-direction: column;
+	gap: 1rem;
+
+	.boards {
+		width: 100%;
+		height: 2rem;
+		// text-align: left;
+		font-size: 16px;
+		font-weight: 700;
+		border-radius: 5px;
+		cursor: pointer;
+		text-decoration: none;
+		display: flex;
+		align-items: center;
+		padding-left: 0.5rem;
+
+		&.focus {
+			color: $blue-light;
+
+			i {
+				color: $blue-light;
+			}
+		}
+
+		&:hover {
+			background-color: $neutral-dark;
+		}
+
+		i {
+			padding-right: 0.5rem;
+		}
+	}
+
+	.line {
+		height: 1px;
+		width: 100%;
+		background-color: $neutral-light;
+	}
+
+	.add {
+		@include flexCenter();
+		justify-content: space-between;
+		width: 100%;
+	}
+}
+
 // ===============
 //
 // ===============
