--- a/main/frontend/src/styles/styles.scss
+++ b/main/frontend/src/styles/styles.scss
@@ -323,18 +323,16 @@ header {
 	flex-direction: column;
 	gap: 1rem;
 
-	.boards {
+	.nav-link {
 		width: 100%;
 		height: 2rem;
-		// text-align: left;
-		font-size: 16px;
-		font-weight: 700;
 		border-radius: 5px;
 		cursor: pointer;
+		font-size: 13px;
 		text-decoration: none;
 		display: flex;
 		align-items: center;
-		padding-left: 0.5rem;
+		padding-left: 2.5rem;
 
 		&.focus {
 			color: $blue-light;
@@ -345,12 +343,18 @@ header {
 		}
 
 		&:hover {
-			background-color: $neutral-dark;
+			background-color: $neutral-light;
 		}
 
 		i {
 			padding-right: 0.5rem;
 		}
+	}
+
+	.boards {
+		font-weight: 700;
+		font-size: 16px;
+		padding-left: 0.5rem;
 	}
 
 	.line {
@@ -363,6 +367,43 @@ header {
 		@include flexCenter();
 		justify-content: space-between;
 		width: 100%;
+		font-size: 12.5px;
+		font-weight: 500;
+
+		i {
+			font-size: 15px;
+			width: 1.5rem;
+			height: 1.5rem;
+			@include flexCenter();
+			border-radius: 4px;
+			cursor: pointer;
+
+			&:hover {
+				background-color: $neutral-light;
+			}
+		}
+	}
+
+	.workspace {
+		width: 100%;
+		.title {
+			@include flexCenter();
+			justify-content: space-between;
+			padding: 0.5rem;
+			height: 3rem;
+			cursor: pointer;
+			border-radius: 5px;
+
+			&:hover {
+				background-color: $neutral-light;
+			}
+		}
+
+		.links {
+			@include flexCenter();
+			flex-direction: column;
+			gap: 0.25rem;
+		}
 	}
 }
 
