--- a/main/frontend/src/styles/styles.css
+++ b/main/frontend/src/styles/styles.css
@@ -252,7 +252,7 @@ header nav.right .nav-info {
 .sidebar .nav-link i {
   padding-right: 0.5rem;
 }
-.sidebar .boards {
+.sidebar .boards-link {
   font-weight: 700;
   font-size: 16px;
   padding-left: 0.5rem;
