--- a/main/frontend/src/styles/styles.scss
+++ b/main/frontend/src/styles/styles.scss
@@ -351,7 +351,7 @@ header {
 		}
 	}
 
-	.boards {
+	.boards-link {
 		font-weight: 700;
 		font-size: 16px;
 		padding-left: 0.5rem;
@@ -405,6 +405,14 @@ header {
 			gap: 0.25rem;
 		}
 	}
+}
+
+// ===============
+// Boards
+// ===============
+
+.boards {
+
 }
 
 // ===============
