--- a/main/frontend/src/styles/styles.css
+++ b/main/frontend/src/styles/styles.css
@@ -15,6 +15,11 @@ input {
   border: none;
 }
 
+img {
+  width: 100%;
+  height: 100%;
+}
+
 body {
   overflow-x: hidden;
   background-color: #fff;
@@ -226,6 +231,7 @@ header nav.right .nav-info {
   justify-content: center;
   align-items: center;
   align-items: flex-start;
+  justify-content: flex-start;
   flex-direction: column;
   gap: 1rem;
 }
@@ -306,4 +312,37 @@ header nav.right .nav-info {
   align-items: center;
   flex-direction: column;
   gap: 0.25rem;
+}
+
+.boards h1 {
+  font-size: 18px;
+  text-transform: uppercase;
+}
+
+.all-boards {
+  display: grid;
+  grid-template-columns: repeat(3, 225px);
+  gap: 2rem;
+  margin-top: 1rem;
+}
+.all-boards a {
+  display: block;
+  width: 225px;
+  height: 125px;
+  border-radius: 5px;
+  position: relative;
+}
+.all-boards a img {
+  border-radius: 5px;
+  filter: brightness(90%);
+}
+.all-boards a img:hover {
+  filter: brightness(80%);
+}
+.all-boards a h1 {
+  position: absolute;
+  top: 0.5rem;
+  left: 0.75rem;
+  color: #fff;
+  font-size: 18px;
 }/*# sourceMappingURL=styles.css.map */
