--- a/main/frontend/src/styles/styles.scss
+++ b/main/frontend/src/styles/styles.scss
@@ -81,6 +81,11 @@ input {
 	border: none;
 }
 
+img {
+	width: 100%;
+	height: 100%;
+}
+
 body {
 	overflow-x: hidden;
 	background-color: $surface-light;
@@ -320,6 +325,7 @@ header {
 .sidebar {
 	@include flexCenter();
 	align-items: flex-start;
+	justify-content: flex-start;
 	flex-direction: column;
 	gap: 1rem;
 
@@ -412,7 +418,40 @@ header {
 // ===============
 
 .boards {
+	h1 {
+		font-size: 18px;
+		text-transform: uppercase;
+	}
+}
 
+.all-boards {
+	display: grid;
+	grid-template-columns: repeat(3, 225px);
+	gap: 2rem;
+	margin-top: 1rem;
+
+	a {
+		display: block;
+		width: 225px;
+		height: 125px;
+		border-radius: 5px;
+		position: relative;
+
+		img {
+			border-radius: 5px;
+			filter: brightness(90%);
+			&:hover {
+				filter: brightness(80%);
+			}
+		}
+		h1 {
+			position: absolute;
+			top: 0.5rem;
+			left: 0.75rem;
+			color: #fff;
+			font-size: 18px;
+		}
+	}
 }
 
 // ===============
