--- a/main/frontend/src/styles/styles.scss
+++ b/main/frontend/src/styles/styles.scss
@@ -455,5 +455,14 @@ header {
 }
 
 // ===============
+// Workspaces
+// ===============
+
+header.workspace {
+	all: unset;
+}
+
+
+// ===============
 //
 // ===============
