--- a/main/frontend/src/styles/styles.scss
+++ b/main/frontend/src/styles/styles.scss
@@ -107,7 +107,7 @@ body {
 // Header
 // ===============
 
-header {
+header.page {
 	@include flexCenter();
 	justify-content: space-between;
 	height: 3rem;
@@ -315,7 +315,7 @@ header {
 	display: grid;
 	grid-template-columns: 300px 1fr;
 	gap: 4rem;
-	padding: 4rem;
+	padding: 3rem 4rem;
 }
 
 // ===============
@@ -459,9 +459,58 @@ header {
 // ===============
 
 header.workspace {
-	all: unset;
+	.top {
+		@include flexCenter();
+		justify-content: space-between;
+		margin-bottom: 0.5rem;
+	}
+
+	span {
+		@include flexCenter();
+		justify-content: flex-start;
+		gap: 0.25rem;
+	}
+	h1 {
+		font-weight: 500;
+		font-size: 20px;
+	}
+	i {
+		height: 1.5rem;
+		width: 1.5rem;
+		border-radius: 5px;
+		@include flexCenter();
+		cursor: pointer;
+		font-size: 12px;
+	}
+	button {
+		border: none;
+		border-radius: 3px;
+		cursor: pointer;
+		background-color: $blue-light;
+		@include flexCenter();
+		color: #fff;
+		padding: 0 0.75rem;
+		height: 2rem;
+
+		i {
+			color: #fff;
+		}
+
+		&:hover {
+			background-color: $blue-bolder-light;
+		}
+	}
+	p {
+		font-size: 14px;
+	}
 }
 
+.header-line {
+	height: 1.5px;
+	width: 100%;
+	background-color: $grey-bolder-dark;
+	margin: 1.5rem 0;
+}
 
 // ===============
 //
