--- a/main/frontend/src/styles/styles.css
+++ b/main/frontend/src/styles/styles.css
@@ -10,7 +10,8 @@ ul {
   list-style-type: none;
 }
 
-input {
+input,
+textarea {
   outline: none;
   border: none;
 }
@@ -18,6 +19,8 @@ input {
 img {
   width: 100%;
   height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 body {
@@ -402,4 +405,120 @@ header.workspace p {
   width: 100%;
   background-color: #dee4ea;
   margin: 1.5rem 0;
+}
+
+.add-background {
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #000;
+  opacity: 0.8;
+  z-index: 100;
+  padding: 4rem;
+}
+
+.add-workspace {
+  background-color: #fff;
+  border-radius: 5px;
+  position: fixed;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  min-height: calc(100vh - 8rem);
+  width: calc(100vw - 8rem);
+  z-index: 200;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding: 3.5rem 7rem;
+  background-image: url(../assets/wavy-background.svg);
+  background-repeat: no-repeat;
+  background-position: right;
+  background-size: 55%;
+}
+.add-workspace form {
+  width: 350px;
+}
+.add-workspace form h1 {
+  font-weight: 500;
+  margin-bottom: 0.5rem;
+}
+.add-workspace form h2 {
+  font-weight: 400;
+  font-size: 18px;
+  margin-bottom: 1rem;
+}
+.add-workspace form input[type=submit] {
+  width: 100%;
+  height: 2.5rem;
+  margin-top: 1rem;
+  cursor: pointer;
+  background-color: #0055cc;
+  color: #fff;
+  font-size: 14px;
+  border-radius: 3px;
+}
+.add-workspace form input[type=submit]:hover {
+  background-color: #09326c;
+}
+.add-workspace ul {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-items: flex-start;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+.add-workspace ul li {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.2rem;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 100%;
+}
+.add-workspace ul li label {
+  font-size: 12px;
+  font-weight: 500;
+}
+.add-workspace ul li input,
+.add-workspace ul li textarea {
+  width: 100%;
+  border: 2px solid rgba(9, 30, 66, 0.0588235294);
+  border-radius: 3px;
+  height: 2.5rem;
+  font-size: 14px;
+  padding: 0 0.5rem;
+}
+.add-workspace ul li input:focus,
+.add-workspace ul li textarea:focus {
+  border-color: #0055cc;
+}
+.add-workspace ul li textarea {
+  padding: 0.5rem;
+  height: auto;
+}
+.add-workspace .img-container {
+  width: 400px;
+}
+.add-workspace .right {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.add-workspace .fa-xmark {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  font-size: 22px;
+  cursor: pointer;
+  width: 1.5rem;
+  height: 1.5rem;
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }/*# sourceMappingURL=styles.css.map */
