--- a/main/frontend/src/styles/styles.scss
+++ b/main/frontend/src/styles/styles.scss
@@ -76,7 +76,8 @@ ul {
 	list-style-type: none;
 }
 
-input {
+input,
+textarea {
 	outline: none;
 	border: none;
 }
@@ -84,6 +85,7 @@ input {
 img {
 	width: 100%;
 	height: 100%;
+	object-fit: contain;
 }
 
 body {
@@ -510,6 +512,129 @@ header.workspace {
 	width: 100%;
 	background-color: $grey-bolder-dark;
 	margin: 1.5rem 0;
+}
+
+// Add new
+// ===============
+
+.add-background {
+	height: 100vh;
+	width: 100vw;
+	position: fixed;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
+	background-color: #000;
+	opacity: 0.8;
+	z-index: 100;
+	padding: 4rem;
+}
+
+.add-workspace {
+	background-color: #fff;
+	border-radius: 5px;
+	position: fixed;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
+	min-height: calc(100vh - 8rem);
+	width: calc(100vw - 8rem);
+	z-index: 200;
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	padding: 3.5rem 7rem;
+	background-image: url(../assets/wavy-background.svg);
+	background-repeat: no-repeat;
+	background-position: right;
+	background-size: 55%;
+
+	form {
+		width: 350px;
+
+		h1 {
+			font-weight: 500;
+			margin-bottom: 0.5rem;
+		}
+		h2 {
+			font-weight: 400;
+			font-size: 18px;
+			margin-bottom: 1rem;
+		}
+
+		input[type="submit"] {
+			width: 100%;
+			height: 2.5rem;
+			margin-top: 1rem;
+			cursor: pointer;
+			background-color: $blue-light;
+			color: #fff;
+			font-size: 14px;
+			border-radius: 3px;
+
+			&:hover {
+				background-color: $blue-bolder-light;
+			}
+		}
+	}
+
+	ul {
+		@include flexCenter();
+		align-items: flex-start;
+		flex-direction: column;
+		gap: 0.5rem;
+
+		li {
+			@include flexCenter();
+			gap: 0.2rem;
+			flex-direction: column;
+			align-items: flex-start;
+			width: 100%;
+
+			label {
+				font-size: 12px;
+				font-weight: 500;
+			}
+
+			input,
+			textarea {
+				width: 100%;
+				border: 2px solid $neutral-light;
+				border-radius: 3px;
+				height: 2.5rem;
+				font-size: 14px;
+				padding: 0 0.5rem;
+
+				&:focus {
+					border-color: $blue-light;
+				}
+			}
+
+			textarea {
+				padding: 0.5rem;
+				height: auto;
+			}
+		}
+	}
+
+	.img-container {
+		width: 400px;
+	}
+
+	.right {
+		@include flexCenter();
+	}
+
+	.fa-xmark {
+		position: absolute;
+		top: 1rem;
+		right: 1rem;
+		font-size: 22px;
+		cursor: pointer;
+		width: 1.5rem;
+		height: 1.5rem;
+		border-radius: 5px;
+		@include flexCenter();
+	}
 }
 
 // ===============
