added delete workspace button

--- a/main/frontend/src/styles/styles.scss
+++ b/main/frontend/src/styles/styles.scss
@@ -657,6 +657,22 @@ header.workspace {
 	}
 }
 
+// Delete Workspace
+// ===============
+
+.delete-workspace {
+	border: none;
+	background-color: transparent;
+	color: $red-light;
+	font-size: 14px;
+	cursor: pointer;
+
+	&:hover {
+		color: $red-bolder-light;
+	}
+}
+
+
 // ===============
 //
 // ===============
