--- a/main/frontend/src/styles/styles.css
+++ b/main/frontend/src/styles/styles.css
@@ -544,4 +544,15 @@ header.workspace p {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.delete-workspace {
+  border: none;
+  background-color: transparent;
+  color: #ae2a19;
+  font-size: 14px;
+  cursor: pointer;
+}
+.delete-workspace:hover {
+  color: #601e16;
 }/*# sourceMappingURL=styles.css.map */
